Set up remote PostgreSQL usage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
   "python-telegram-bot>=21.0,<22.0",
   "SQLAlchemy>=2.0,<3.0",
   "python-dotenv>=1.0,<2.0",
+  "psycopg[binary]>=3.2,<4.0",
 ]
 
 [tool.ruff]
