--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 BOT_TOKEN=123456:replace_me
+DATABASE_URL=postgresql://bot:replace_me@dpg-example.frankfurt-postgres.render.com/reflux
 DB_PATH=reflux.db
 DEFAULT_TIMEZONE=Europe/Belgrade
