Switch to webhooks from polling

--- a/env.example
+++ b/env.example
@@ -2,3 +2,7 @@ BOT_TOKEN=123456:replace_me
 DATABASE_URL=postgresql://bot:replace_me@dpg-example.frankfurt-postgres.render.com/reflux
 DB_PATH=reflux.db
 DEFAULT_TIMEZONE=Europe/Belgrade
+WEBHOOK_URL=https://your-service.onrender.com
+WEBHOOK_PATH=/telegram
+# Optional, but recommended: Telegram will send this in X-Telegram-Bot-Api-Secret-Token header.
+WEBHOOK_SECRET_TOKEN=replace_me_with_random_string
