First attempt on adding product categories

--- a/env.example
+++ b/env.example
@@ -6,3 +6,8 @@ WEBHOOK_URL=https://your-service.onrender.com
 WEBHOOK_PATH=/telegram
 # Optional, but recommended: Telegram will send this in X-Telegram-Bot-Api-Secret-Token header.
 WEBHOOK_SECRET_TOKEN=replace_me_with_random_string
+
+# Optional: enable LLM meal parsing + taxonomy linking
+OPENAI_API_KEY=replace_me
+OPENAI_MODEL_EXTRACT=gpt-4o-mini
+OPENAI_MODEL_RERANK=gpt-4o-mini
