--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
   "SQLAlchemy>=2.0,<3.0",
   "python-dotenv>=1.0,<2.0",
   "psycopg[binary]>=3.2,<4.0",
+  "openai>=1.0,<2.0",
+  "rapidfuzz>=3.0,<4.0",
 ]
 
 [tool.ruff]
