Update the food categories pipeline

--- a/env.example
+++ b/env.example
@@ -11,3 +11,5 @@ WEBHOOK_SECRET_TOKEN=replace_me_with_random_string
 OPENAI_API_KEY=replace_me
 OPENAI_MODEL_EXTRACT=gpt-4o-mini
 OPENAI_MODEL_RERANK=gpt-4o-mini
+OPENAI_TIMEOUT_S=60
+OPENAI_MAX_RETRIES=4
